--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "node --inspect=9229 ./node_modules/jest/bin/jest.js",
     "package": "node-lambda package",
-    "deployDev": "node-lambda deploy -e dev",
-    "deployProd": "node-lambda deploy -e prod",
+    "deployDev": "node-lambda deploy -e dev -f deploy-dev.env",
+    "deployProd": "node-lambda deploy -e prod -f deploy-prod.env",
     "debugLambda": "node --inspect-brk=9229 ./node_modules/node-lambda/bin/node-lambda run --handler src/index.handler --eventFile ./data/event.json --contextFile ./data/context.json --configFile ./deploy.env",
     "testLambda": "node ./node_modules/node-lambda/bin/node-lambda run --handler src/index.handler --eventFile ./data/event.json --contextFile ./data/context.json --configFile ./deploy.env"
   },
